[package]
name = "block-modes"
version = "0.3.3"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Block cipher modes of operation"
documentation = "https://docs.rs/block-modes"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "block-cipher", "ciphers"]

[dependencies]
block-padding = { git = "https://github.com/mesalock-linux/rustcrypto-utils-sgx" }
block-cipher-trait = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx" }
sgx_tstd = { rev = "v1.1.1", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
#aes-soft = "0.3"
#hex-literal = "0.1"

[features]
default = ["std", "mesalock_sgx"]
std = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
