[package]
name = "des"
version = "0.3.0"
authors = ["RustCrypto Developers"]
license = "MIT/Apache-2.0"
description = "DES and Triple DES (3DES, TDES) block ciphers implementation"
documentation = "https://docs.rs/des"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "des", "tdes", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
block-cipher-trait = { git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx" }
byteorder = { git = "https://github.com/mesalock-linux/byteorder-sgx" }
opaque-debug = "0.2"

[dev-dependencies]
#block-cipher-trait = { version = "0.6", features = ["dev"] }

[badges]
travis-ci = { repository = "RustCrypto/block-ciphers" }
